[tool.ruff]
exclude = [
    '.git',
    '.eggs',
    '__pycache__',
    'doc/examples',
]
ignore = [
    'UP006',
    'UP007',
    'UP009',
    'N802',
    'N806',
    'C901',
    'B008',
    'B011',
    'RUF002',
]
line-length = 100
select = [
    'I',
    'E',
    'F',
    'W',
    'UP',
    'N',
    'C',
    'B',
    'T',
    'RUF',
    'YTT',
]

[tool.ruff.pep8-naming]
ignore-names = [
    'l',
    'h',
]
[tool.poetry]
name = "backtesting-py"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backtesting"}]

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.26.1"
pandas = "^2.1.2"
bokeh = "3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
